[gd_scene load_steps=2 format=2]

[ext_resource path="res://NewMultiplayer.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ClientButton" type="Button" parent="."]
margin_left = 161.0
margin_top = 252.0
margin_right = 333.0
margin_bottom = 307.0
text = "Join"

[node name="ServerButton" type="Button" parent="."]
margin_left = 622.0
margin_top = 250.0
margin_right = 794.0
margin_bottom = 305.0
text = "Host"

[node name="StartButton" type="Button" parent="."]
visible = false
margin_left = 404.0
margin_top = 250.0
margin_right = 576.0
margin_bottom = 305.0
text = "Start"

[connection signal="pressed" from="ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
